tests/a/tests/provenance/fail/let/let.1.stderr
error: expected (root,b), found (root,root)
 --> tests/provenance/fail/let/let.1.rs:6:13
  |
6 |     let w = 5;
  |             ^
